--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="principal">#8401C2</color>
-    <color name="grey">#D9D9D9</color>
+    <color name="grey">#BCBCBC</color>
+    <color name="green">#2DCA7E</color>
 </resources>
