aggiornata entità eventi, creata lista di eventi, apertura di viewEvent su onclick

--- a/app/src/main/res/layout/activity_view_event.xml
+++ b/app/src/main/res/layout/activity_view_event.xml
@@ -49,6 +49,7 @@
                     android:src="@drawable/p_1" />
 
                 <TextView
+                    android:id="@+id/numPartecipanti"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -97,6 +98,7 @@
                             android:src="@drawable/p_1" />
 
                         <TextView
+                            android:id="@+id/eventDate"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
@@ -118,6 +120,7 @@
                             android:src="@drawable/p_1" />
 
                         <TextView
+                            android:id="@+id/eventHour"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
