--- a/app/src/main/res/layout/activity_view_event.xml
+++ b/app/src/main/res/layout/activity_view_event.xml
@@ -183,7 +183,6 @@
                     android:layout_height="match_parent"
                     android:background="@color/grey">
 
-
                     <org.osmdroid.views.MapView
                         android:id="@+id/mapView"
                         android:layout_width="match_parent"
@@ -191,7 +190,8 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"/>
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
@@ -228,7 +228,9 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/p_1" />
 
+
             </androidx.cardview.widget.CardView>
+
 
             <ImageView
                 android:id="@+id/arrow"
@@ -239,6 +241,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/arrow" />
+
+            <ImageView
+                android:id="@+id/heart"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:layout_constraintBottom_toBottomOf="@+id/arrow"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/arrow"
+                app:srcCompat="@drawable/heart_animation"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
