--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -26,6 +26,7 @@
             android:layout_height="match_parent">
 
             <ImageView
+                android:id="@+id/viewProfileEyes"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginTop="10dp"
