--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -192,6 +192,26 @@
                 android:src="@drawable/baseline_arrow_forward_ios_24"
                 android:layout_gravity="center_vertical"/>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="20dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="10dp"
+                android:text="Log Out"
+                android:textColor="#FF0000"
+                android:textSize="15sp"
+                android:onClick="logout"/>
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
