--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -201,14 +201,14 @@
             android:layout_marginTop="20dp">
 
             <TextView
+                android:id="@+id/logout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="10dp"
                 android:text="Log Out"
                 android:textColor="#FF0000"
-                android:textSize="15sp"
-                android:onClick="logout"/>
+                android:textSize="15sp"/>
 
         </LinearLayout>
 
